添加ContentView支持自动布局计算宽高或者指定宽高。

--- a/PJPresentationExample/Podfile
+++ b/PJPresentationExample/Podfile
@@ -6,5 +6,7 @@ target 'PJPresentationExample' do
   use_frameworks!
   # Pods for MTShopList
 pod 'PJPresentation', :path => '../../PJPresentation'
+pod 'MJRefresh', '~> 3.7.5'
+pod 'LookinServer', :configurations => ['Debug']
 
 end
